space2center cdf

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -32,6 +32,8 @@ table, th, td {
 table {
   border-spacing: 15px;
 }
+
+		h5 {text-align: center;}
 </style>
 
 </head>
@@ -95,11 +97,11 @@ table {
 				</div>
   <p>
 
-						<center>
 		<h5 class="center m-bottom" class="font_7" style="font-size:26px" title="hover over each for a description">
-				<p>Council of Data Facilities (<a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a>) <a href="https://earthcube.clowderframework.org/spaces?size=24" target="_blank">repositories</a> crawled and indexed:  </p>
-  </h5>
+						<center>
+				<p> &emsp; &emsp;   Council of Data Facilities (<a id="repo-list"  href=https://www.earthcube.org/council-of-data-facilities>CDF</a>) <a href="https://earthcube.clowderframework.org/spaces?size=24" target="_blank">repositories</a> crawled and indexed:  </p>
 						</center>
+  </h5>
 
         </div>
         <div class="row">
