moved to lit  to we can css the webcomponents Added map and links to page. Map not displaying, yet

--- a/alpha/website/dataset_2.html
+++ b/alpha/website/dataset_2.html
@@ -20,9 +20,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.0.0/js-yaml.min.js"></script>
    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.0.2/package/lib/browser/fs.js"></script> -->
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 
-
-
+    <script src="https://unpkg.com/@webcomponents/webcomponentsjs@next/webcomponents-loader.js"></script>
     <script type="module" src="./js/dataset2/obj-exchange.js"></script>
     <!-- <script type="module" src="/js/components/demo-tp.js"></script> -->
     <script type="module" src="./js/dataset2/eco-sparql.js"></script>
@@ -70,8 +71,8 @@
     <div class="row col-12">
 
 
-            <div class="row">
-                <obj-exchange class="col-8"></obj-exchange>
+<!--            <div class="row">-->
+                <obj-exchange class="row" ></obj-exchange>
 
 <!--                <div class="col-8"> -->
 
@@ -118,19 +119,19 @@
 
 <!--                </div>-->
 
-                <div class="col-4 ">
+<!--                <div class="col-4 ">-->
 
-                    <div class="row">
-                        <img src="./images/map.jpg" />
-                    </div>
-                    <div class="row font-weight-bold">Downloads</div>
-                    <div class="row">
-                        <div class="btn btn-primary w-75">Download Tiff</div>
-                        <div class="btn btn-primary w-75">Download Tiff</div>
-                    </div>
-                </div>
+<!--                    <div class="row">-->
+<!--                        <img src="./images/map.jpg" />-->
+<!--                    </div>-->
+<!--                    <div class="row font-weight-bold">Downloads</div>-->
+<!--                    <div class="row">-->
+<!--                        <div class="btn btn-primary w-75">Download Tiff</div>-->
+<!--                        <div class="btn btn-primary w-75">Download Tiff</div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-            </div>
+<!--            </div>-->
 </div>
 
             <div class="row">
