--- a/alpha/website/dataset_2.html
+++ b/alpha/website/dataset_2.html
@@ -28,6 +28,7 @@
     <!-- <script type="module" src="/js/components/demo-tp.js"></script> -->
     <script type="module" src="./js/dataset2/eco-sparql.js"></script>
     <script type="module" src="./js/dataset2/eco-urltemplate.js"></script>
+    <script type="application/javascript" src="./js/dataset2/map.js"></script>
     <link rel="stylesheet" href="./css/main.css"/>
 </head>
 
