Tabbed the Metadata/Website/Citation

--- a/alpha/website/dataset_2.html
+++ b/alpha/website/dataset_2.html
@@ -45,7 +45,7 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <form class="input-group form-inline   ">
+        <form class="input-group form-inline   " hidden>
             <input id="q" class="form-control w-25 ml-sm-2" type="search" placeholder="Search" aria-label="Search">
             <div class="input-group-append">
                 <a href="#" class="btn btn-default" id="searchBtn">
@@ -154,8 +154,8 @@
                     <!-- <div class="img img-simple center"></div> -->
                     <h3>Compatible tools</h3>
                     <div>
-                      <!--  <eco-sparql></eco-sparql> -->
-                        NetCDF Viewer
+                        <eco-sparql></eco-sparql>
+
                     </div>
 
 
@@ -164,8 +164,8 @@
                     <!-- <div class="img img-simple center"></div> -->
                     <h3>Web Apps</h3>
                     <div>
-                      <!--  <eco-urltemplate></eco-urltemplate> -->
-                        View on Map
+                       <eco-urltemplate></eco-urltemplate>
+
                     </div>
                 </div>
 
