--- a/alpha/website/dataset_mock.html
+++ b/alpha/website/dataset_mock.html
@@ -75,15 +75,31 @@
 
                                       <!--  <obj-exchange></obj-exchange> -->
                     <h1 class="row">
-                        Species List, Species Abundance, and Sediment Geochemistry processed data acquired during Laurence M. Gould expedition LMG0802 (2008)                   </h1>
+                        Species List, Species Abundance, and Sediment Geochemistry processed data acquired during Laurence M. Gould expedition LMG0802 (2008)
+                    </h1>
                     <div class="row">
-                         <span class="btn btn-light">Website</span>
-                        <span class="btn btn-light">Cite</span>
-                        <span class="btn btn-light">Metadata</span>
-                    </div>
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="md-tab" data-toggle="tab" href="#md" role="tab"
+                                   aria-controls="md" aria-selected="true">Metadata</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " id="web-tab" data-toggle="tab" href="#web" role="tab"
+                                   aria-controls="web" aria-selected="true">Website</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link " id="citation-tab" data-toggle="tab" href="#cite" role="tab"
+                                   aria-controls="cite" aria-selected="true">Citation</a>
+                            </li>
+                        </ul>
+<!--                            <span class="btn btn-light">Website</span>-->
+<!--                        <span class="btn btn-light">Cite</span>-->
+<!--                        <span class="btn btn-light">Metadata</span>-->
 
 
 
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="md" role="tabpanel" aria-labelledby="md-tab">
                     <div class="row">
 
                             <span class="col-2 font-weight-bold">Type:</span>
@@ -113,9 +129,17 @@ Marine Geoscience Data System (MGDS)</span>
                             <span class="col-8">
                                 2012-08-08</span>
                     </div>
+                        </div>
 
+                        <div class="tab-pane fade" id="web" role="tabpanel" aria-labelledby="web-tab">
+                                <div>WebTab</div></div>
+                            <div class="tab-pane fade" id="cite" role="tabpanel" aria-labelledby="cite-tab">
+                                <div>CiteTab </div>
+                            </div>
+
+                        </div>
                 </div>
-
+                    </div>
                 <div class="col-4 ">
 
                     <div class="row">
