--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -45,7 +45,7 @@
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <form class="input-group form-inline   " hidden>
+        <form class="input-group form-inline  invisible" >
             <input id="q" class="form-control w-25 ml-sm-2" type="search" placeholder="Search" aria-label="Search">
             <div class="input-group-append">
                 <a href="#" class="btn btn-default" id="searchBtn">
