pub-typo rm-icons change footer headings

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -147,26 +147,28 @@
                 <!-- </p> -->
                 <!-- </div> -->
 <div class="col-6">
-    <h3>Related Data</h3>
+		<!-- <h3>Related Data</h3> -->
 </div>
                 <div class="col-6 ">
-                    <img src="./images/aggregate.svg" style="height:75px">
-                    <!-- <div class="img img-simple center"></div> -->
                     <h3>Compatible tools</h3>
-                    <div>
-                        <eco-sparql></eco-sparql>
 
-                    </div>
-
-
-
-                    <img src="./images/webapp.svg" style="height:75px">
+										<!-- <img src="./images/webapp.svg" style="height:25px"> -->
                     <!-- <div class="img img-simple center"></div> -->
-                    <h3>Web Apps</h3>
+										<!-- <h3>Web Apps</h3> -->
+										<h5>web apps:</h5>
                     <div>
-                       <eco-urltemplate></eco-urltemplate>
-
+                       <eco-urltemplate></eco-urltemplate> 
                     </div>
+
+										<!-- <img src="./images/aggregate.svg" style="height:25px"> -->
+                    <!-- <div class="img img-simple center"></div> -->
+										<!-- <h3>Compatible tools</h3> -->
+										<h5>downloadable tools:</h5>
+
+                    <div>
+                        <eco-sparql></eco-sparql> 
+                    </div> 
+
                 </div>
 
             </div>
