--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -327,7 +327,7 @@
                             // 'name': 'Place',
                             'placenames': 'Place',
                             'pubname': 'Publisher/Repo',
-                            'datep': 'Year Pulished'
+                            'datep': 'Year Published'
                         },
                         resultSelector: '#results',
                         facetSelector: '#facets',
