add search-link to landing

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -59,6 +59,9 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
+										<a class="nav-link" href="landing.html">Search</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="about.html">Help</a>
                 </li>
             </ul>
