--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -157,10 +157,13 @@
             ?subj schema:name|sschema:name ?name .
             ?subj schema:description|sschema:description ?description .
             filter( ?score > 0.04).
-            OPTIONAL {?subj schema:datePublished|sschema:datePublished ?datep .}
-            OPTIONAL {?subj schema:publisher/schema:name|sschema:publisher/sschema:name ?pubname .}
-            OPTIONAL {?subj schema:spatialCoverage/schema:name|sschema:spatialCoverage/sschema:name ?placename .}
+            OPTIONAL {?subj schema:datePublished|sschema:datePublished ?date_p .}
+            OPTIONAL {?subj schema:publisher/schema:name|sschema:publisher/sschema:name ?pub_name .}
+            OPTIONAL {?subj schema:spatialCoverage/schema:name|sschema:spatialCoverage/sschema:name ?place_name .}
             OPTIONAL {?subj schema:keywords|sschema:keywords ?kwu .}
+				    BIND ( IF ( BOUND(?date_p), ?date_p, "N/A") as ?datep ) .
+            BIND ( IF ( BOUND(?pub_name), ?pub_name, "N/A") as ?pubname ) .
+            BIND ( IF ( BOUND(?place_name), ?place_name, "N/A") as ?placename ) .
         }
         GROUP BY ?subj ?datep ?pubname ?name ?description ?url ?score ?resourceType ?g
         ORDER BY DESC(?score)
