updates to throughput web component

--- a/gleaner/website/index.html
+++ b/gleaner/website/index.html
@@ -12,7 +12,7 @@
 
 
   <script type="module" src="/js/components/obj-exchange.js"></script>
-  <!-- <script type="module" src="/js/components/demo-tp.js"></script> -->
+  <script type="module" src="/js/components/demo-tpv2.js"></script>
   <script type="module" src="/js/components/eco-sparql.js"></script>
   <script type="module" src="/js/components/eco-urltemplate.js"></script>
 
@@ -78,16 +78,16 @@
 
 
       <div class="row">
-        <!-- <div class="col-4 center"> -->
-          <!-- <div class="img img-responsive center"></div> -->
-          <!-- <img src="./img/throughput.svg" style="height:75px"> -->
-          <!-- <h3>Throughput</h3> -->
-          <!-- <p> -->
+         <div class="col-4 center"> 
+             <!-- <div class="img img-responsive center"></div>   -->
+           <img src="./img/throughput.svg" style="height:75px"> 
+           <h3>Throughput</h3>
+           <p>
             
-            <!-- <demo-tp></demo-tp> -->
+             <demo-tp></demo-tp> 
 
-          <!-- </p> -->
-        <!-- </div> -->
+           </p>
+         </div>
         
         <div class="col-4 center">
           <img src="./img/aggregate.svg" style="height:75px">
