--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -161,9 +161,9 @@
             OPTIONAL {?subj schema:publisher/schema:name|sschema:publisher/sschema:name ?pub_name .}
             OPTIONAL {?subj schema:spatialCoverage/schema:name|sschema:spatialCoverage/sschema:name ?place_name .}
             OPTIONAL {?subj schema:keywords|sschema:keywords ?kwu .}
-				    BIND ( IF ( BOUND(?date_p), ?date_p, "N/A") as ?datep ) .
-            BIND ( IF ( BOUND(?pub_name), ?pub_name, "N/A") as ?pubname ) .
-            BIND ( IF ( BOUND(?place_name), ?place_name, "N/A") as ?placename ) .
+				    BIND ( IF ( BOUND(?date_p), ?date_p, "no:datePublished") as ?datep ) .
+            BIND ( IF ( BOUND(?pub_name), ?pub_name, "no:publisher.name") as ?pubname ) .
+            BIND ( IF ( BOUND(?place_name), ?place_name, "no:spatialCoverage.name") as ?placename ) .
         }
         GROUP BY ?subj ?datep ?pubname ?name ?description ?url ?score ?resourceType ?g
         ORDER BY DESC(?score)
