"Science Domain =to=> Keywords"

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -326,7 +326,8 @@
                         facets: {
                             // 'subj': 'Science Domain',
                             'resourceType': 'Resource Type',
-                            'kw': 'Science Domain',
+                            //'kw': 'Science Domain',
+                            'kw': 'Keywords',
                             // 'name': 'Place',
                             'placenames': 'Place',
                             'pubname': 'Publisher/Repo',
