Remove faceted search label, add margin-top and padding-top

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -66,14 +66,14 @@
     </nav>
 
 
-    <div id="wrapper row">
-        <div id="description">
-            <h6>Faceted Search of EarthCube resources</h6>
+<!--    <div id="wrapper row">-->
+<!--        <div id="description">-->
+<!--            <h6>Faceted Search of EarthCube resources</h6>-->
 
-        </div>
-    </div>
+<!--        </div>-->
+<!--    </div>-->
     <!-- Here comes the demo, if you want to copy and paste, start here -->
-    <div class="row col-12" id="filterDiv"> <!-- filters -->
+    <div class="row col-12 mt-3 pt-2" id="filterDiv"> <!-- filters -->
         <div class="row col-3 align-items-start">
             <div id="facets" class="row col-12">
 
