add open-in-tab to about+landing but not dataset bc behind

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -59,7 +59,7 @@ table {
             <ul class="navbar-nav mr-auto  mt-2 mt-lg-0 ">
 
                 <li class="nav-item ">
-                    <a class="nav-link" href="landing.html">Search</a>
+                    <a class="nav-link" href="landing.html"  target="_blank">Search</a>
                 </li>
 
                 <li class="nav-item active ">
