--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -35,10 +35,10 @@
                 <!--                    <a class="nav-link" href="#">EarthCube <span class="sr-only">(current)</span></a>-->
                 <!--                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query">SPARQL Endpoint</a>
+                    <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query"  target="_blank">SPARQL Endpoint</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">Help</a>
+                    <a class="nav-link" href="about.html"  target="_blank">Help</a>
                 </li>
             </ul>
             <!--            <form class="form-inline my-2 my-lg-0">-->
