tech-help2about

--- a/alpha/website/tech.html
+++ b/alpha/website/tech.html
@@ -63,7 +63,7 @@ table {
                 </li>
 
                 <li class="nav-item active ">
-                    <a class="nav-link" href="#">Help</a>
+                    <a class="nav-link" href="about.html">Help</a>
                 </li>
             </ul>
 
