dataset/live+landing open tabs in links

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -59,10 +59,10 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-										<a class="nav-link" href="landing.html">Search</a>
+										<a class="nav-link" href="landing.html" target="_blank">Search</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">Help</a>
+                    <a class="nav-link" href="about.html" target="_blank">Help</a>
                 </li>
             </ul>
 
