--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -54,7 +54,7 @@
             <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">Help</a>
+                    <a class="nav-link" href="about.html" target="_blank">Help</a>
                 </li>
             </ul>
 
