fix margins. move connected tools. add borders to connected tools

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -34,7 +34,7 @@
 
 <body class="container-fluid ml-1">
 <div class="col-10 pl-0">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-12">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-12 ml-6">
         <a class="navbar-brand" href="https://www.earthcube.org/">
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy">
@@ -72,11 +72,11 @@
         </div>
     </nav>
 
-    <div class="row col-12">
 
-                <obj-exchange class="row ml-2 mr-1" ></obj-exchange>
 
-</div>
+                <obj-exchange class="row ml-4 mr-1" ></obj-exchange>
+
+
 
             <div class="row">
                 <!-- <div class="col-4 center"> -->
@@ -92,14 +92,15 @@
 <!--<div class="col-6">-->
 <!--		&lt;!&ndash; <h3>Related Data</h3> &ndash;&gt;-->
 <!--</div>-->
+                <div class="col-1" ></div>
                 <div class="col-6 ">
                     <h3>Compatible tools</h3>
-                    <div class="row border rounded my-1">
+                    <div class="row border rounded my-1 ml-6">
                         <span class="col-4">web apps:</span>
 
                        <eco-urltemplate ></eco-urltemplate>
                     </div>
-                    <div class="row border rounded my-1">
+                    <div class="row border rounded my-1  ml-6">
 						<span  class="col-4">downloadable tools:</span>
 
 
