--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -95,12 +95,12 @@
                 <div class="col-1" ></div>
                 <div class="col-6 ">
                     <h3>Compatible tools</h3>
-                    <div class="row border rounded my-1 ml-6">
+                    <div class="row  my-1 ml-6">
                         <span class="col-4">web apps:</span>
 
                        <eco-urltemplate ></eco-urltemplate>
                     </div>
-                    <div class="row border rounded my-1  ml-6">
+                    <div class="row  my-1  ml-6">
 						<span  class="col-4">downloadable tools:</span>
 
 
