Compatible-tools:downloadable: as tools is understood

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -103,7 +103,8 @@
                     </div>
 										<!-- <div class="row border rounded my-1  ml-6 color:white"> -->
                     <div class="row  m-1 my-1  ml-6 ">
-						<span  class="col-4">downloadable tools:</span>
+												<!-- <span  class="col-4">downloadable tools:</span> -->
+						<span  class="col-4">downloadable:</span>
 
 
                         <eco-sparql ></eco-sparql>
